Closed
Bug 1617575
Opened 6 years ago
Closed 6 years ago
[Wayland] Firefox throws IPDL protocol Error: Received an invalid file descriptor
Categories
(Core :: Widget: Gtk, defect)
Core
Widget: Gtk
Tracking
()
RESOLVED
FIXED
mozilla75
| Tracking | Status | |
|---|---|---|
| firefox75 | --- | fixed |
People
(Reporter: stransky, Assigned: stransky)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
Firefox throws IPDL protocol Error: Received an invalid file descriptor when fence is not used.
| Assignee | ||
Comment 1•6 years ago
|
||
Pushed by shindli@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8cb82e84f280
[Wayland] Don't pass invalid file descriptors to SurfaceDescriptorDMABuf, r=jhorak
Comment 3•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox75:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
You need to log in
before you can comment on or make changes to this bug.
Description
•