Bug 1617575 [Wayland] Don't pass invalid file descriptors to SurfaceDescriptorDMABuf, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D63850